[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-register"
version = "2.0.0"
description = "Automated Ollama and Puter account registration with anti-detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ollama-register contributors" },
]
keywords = ["ollama", "puter", "registration", "automation", "anti-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "curl_cffi>=0.15,<1",
    "playwright>=1.52,<2",
    "filelock>=3.16,<4",
    "quart>=0.19,<1",
    "camoufox>=0.4,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
ollama-register = "main:cli"
puter-v2 = "puter_register_v2:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools]
py-modules = ["main", "ollama_register", "puter_register_v2"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
